# LeetCoder

./: README.md
leetcoder/: pyproject.toml
leetcoder/src/: web.py
leetcoder/src/leetcoder/: crew.py  main.py
leetcoder/src/leetcoder/config/: tasks.yaml
leetcoder/src/leetcoder/tools/: custom_tool.py
src/leetcoder/: crew.py  main.py  retrieve.py
src/leetcoder/config/: agents.yaml
